新增 系统托盘图标
点击托盘图标开始拾取，右键可退出程序。

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@ set(SOURCES
         screencover.h screencover.cpp
         pickermanager.h pickermanager.cpp
         utils.cpp utils.h
+        trayicon.h trayicon.cpp
+        ../images/images.qrc
 )
 add_executable(MPicker ${SOURCES})
 target_link_libraries(MPicker PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
