新增 快捷键编辑界面
新增了用于采集快捷键组合的窗口，但暂未实现快捷键的存储和配置。

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
         pickermanager.h pickermanager.cpp
         utils.cpp utils.h
         trayicon.h trayicon.cpp
+        shortcutwidget.h shortcutwidget.cpp
         ../images/images.qrc
 )
 if (WIN32)
