新增 第一次启动显示帮助页面
新增第一次启动显示帮助页面

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,8 @@ set(SOURCES
 )
 if (WIN32)
     set(CMAKE_CXX_FLAGS "-mwindows")
-    add_executable(MPicker ${SOURCES} ../icon.rc)
+    add_executable(MPicker ${SOURCES} ../icon.rc
+        welcomewidget.h welcomewidget.cpp)
 else()
     add_executable(MPicker ${SOURCES})
 endif()
